# medadvml

./: .gitignore  .gitmodules  README.md  project.toml  pyproject.toml  result.py
medadvml/: __main__.py
medadvml/config/: __init__.py
medadvml/data/: loader.py  visualisation.py
medadvml/models/: __init__.py  simple.py
medadvml/notebooks/: medmnist.ipynb
medadvml/scripts/: test.py  train.py  train_old.py
medadvml/utilities/: losses.py  platform.py
